# HyperEngine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
Editor/private/: main.cpp
Engine/private/: ImplLogger.cpp  ImplLogger.hpp  ImplWindow.cpp  ImplWindow.hpp
Engine/private/Rendering/: ImplRenderer.cpp  ImplRenderer.hpp  Renderer.cpp
Engine/private/VR/: ImplContext.cpp  ImplContext.hpp
Engine/private/WidgetSystem/: ImplWidgetSystem.cpp  ImplWidgetSystem.hpp
Engine/private/WidgetSystem/Widgets/: ConsoleWidget.cpp  MenuBar.cpp
Engine/public/Engine/: Logger.cpp  Logger.hpp  Window.cpp  Window.hpp  pch.hpp
Engine/public/Engine/Rendering/: Renderer.cpp  Renderer.hpp
Engine/public/Engine/VR/: Context.hpp
Engine/public/Engine/WidgetSystem/: WidgetBase.cpp  WidgetBase.hpp  WidgetSystem.cpp  WidgetSystem.hpp
Engine/public/Engine/WidgetSystem/Widgets/: ConsoleWidget.cpp  ConsoleWidget.hpp  MenuBar.cpp  MenuBar.hpp
Runtime/private/: main.cpp
cmake/vcpkg-overlay-ports/daxa/: portfile.cmake
